// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should render with border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1p89o19-0 iRdKeT"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-12y9mmp-0 dbZfon"
          >
            something
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableRow should render without border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1p89o19-0 dXhSPI"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-12y9mmp-0 dbZfon"
          >
            something
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
